--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   "devCommand": "npm run dev -- --host",
   "outputDirectory": "dist",
   "functions": {
-    "api/**/*.ts": {
+    "api/**/index.ts": {
       "runtime": "nodejs20.x"
     }
   }
