--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,10 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "version": 2,
   "framework": "vite",
   "installCommand": "npm install",
   "buildCommand": "npm run build",
   "devCommand": "npm run dev -- --host",
-  "outputDirectory": "dist",
-  "functions": {
-    "api/**/index.ts": {
-      "runtime": "nodejs20.x"
-    }
-  }
+  "outputDirectory": "dist"
 }
 
 
